--- a/env.yaml
+++ b/env.yaml
@@ -6,11 +6,16 @@ channels:
   - defaults
 dependencies:
   - cuda
+  - gcc_linux-64=11.2.0
+  - gxx_linux-64=11.2.0
+  - cmake=3.22.1
   - python=3.8.19
   - pip=24.2
   - pip:
   # pip install torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu118
+  # export LD_LIBRARY_PATH=/root/miniconda3/envs/chamferloss_cuda/lib:$LD_LIBRARY_PATH
       - torch==2.1.2+cu118 --index-url https://download.pytorch.org/whl/cu118
       - torchvision==0.16.2+cu118 --index-url https://download.pytorch.org/whl/cu118
       - torchaudio==2.1.2+cu118 --index-url https://download.pytorch.org/whl/cu118
       - ninja==1.11.1.4
+      - scikit-learn==1.3.2
