--- a/env.yaml
+++ b/env.yaml
@@ -14,6 +14,7 @@ dependencies:
   - pip:
   # pip install torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu118
   # export LD_LIBRARY_PATH=/root/miniconda3/envs/chamferloss_cuda/lib:$LD_LIBRARY_PATH
+  # export LD_PRELOAD=$CONDA_PREFIX/lib/libstdc++.so.6
       - torch==2.1.2+cu118 --index-url https://download.pytorch.org/whl/cu118
       - torchvision==0.16.2+cu118 --index-url https://download.pytorch.org/whl/cu118
       - torchaudio==2.1.2+cu118 --index-url https://download.pytorch.org/whl/cu118
